reservation swagger
